--- a/.github/workflows/master_qsdsdqwe.yml
+++ b/.github/workflows/master_qsdsdqwe.yml
@@ -53,10 +53,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -66,13 +63,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip     
         
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C6F8EA48B1D64347BD497B5374699B2D }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5155D9EBD93744349C8C41C5882BAF23 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_57B28A13B7D04EFB8A75F1298225D48A }}
-
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
         id: deploy-to-function
@@ -80,4 +70,4 @@ jobs:
           app-name: 'qsdsdqwe'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_AEA933B40C1C4E3A893757A1ECC16E5B }}
